<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home_24" />

    <item
        android:id="@+id/transactionFragment"
        android:title="@string/nav_transactions"
        android:icon="@drawable/ic_receipt_24" />

    <item
        android:id="@+id/transactionFormFragment"
        android:title="@string/nav_add"
        android:icon="@drawable/ic_add_24" />

    <item
        android:id="@+id/statisticsFragment"
        android:title="@string/nav_statistics"
        android:icon="@drawable/ic_bar_chart_24" />

    <item
        android:id="@+id/aiSummaryFragment"
        android:title="@string/nav_ai"
        android:icon="@drawable/ic_ai_24" />

</menu>
